# FnRmux

./: .gitignore  FPK_PACKAGING.md  GEMINI.md  README.md  build_fpk.sh  install_fpk.sh
backend/: Cargo.toml
backend/src/: config.rs  main.rs  models.rs
backend/src/api/: mod.rs
backend/src/auth/: mod.rs
backend/src/db/: mod.rs
backend/src/terminal/: mod.rs
build_fpk/: LICENSE  manifest
build_fpk/app/server/lib/: libutempter.so.0
build_fpk/app/ui/: config
build_fpk/cmd/: common  config_callback  install_callback  install_init  main  uninstall_callback  uninstall_init  upgrade_callback  upgrade_init
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: runtimeBase.js
frontend/src/assets/: style.css
frontend/src/router/: index.js
frontend/src/views/: ConfigView.vue  LoginView.vue  TerminalView.vue
scripts/: generate_icons.py
