[package]
name = "fnrmux"
version = "0.0.1"
edition = "2021"
description = "FnRmux - Web terminal with SSH/tmux"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "set-header", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async
futures-util = "0.3"
tokio-util = "0.7"

# HTTP client (for background URL download)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

notify = "8.2.0"
libc = "0.2.186"
bcrypt = "0.19.1"
async-trait = "0.1.89"
